--- a/style.css
+++ b/style.css
@@ -19,10 +19,15 @@ body{
     cursor: pointer;
 }
 
+#btnTry{
+    width: 100px;
+}
+
 .container{
     display: flex;
     justify-content: center;
     text-align: center;
+    align-items: center;
     margin: 30px 0px;
     flex-direction: column;
 }
