--- a/style.css
+++ b/style.css
@@ -15,13 +15,20 @@ body{
     aspect-ratio: 3/2;
 }
 
-#btnRck,#btnPpr,#btnSci:hover{
+#btnRck,#btnPpr,#btnSci,#btnTry:hover{
     cursor: pointer;
 }
 
 #btnTry{
-    width: 100px;
+    width: 120px;
+    border: none;
+    padding: 10px 15px;
+    background-color: brown;
+    color: white;
+    font-size: 16px;
 }
+
+
 
 .container{
     display: flex;
